@@ -168,6 +168,13 @@ namespace Astroid {
       void grab_modal () override;
       void release_modal () override;
 
+      typedef sigc::signal <void, bool> type_message_sent_attempt;
+      type_message_sent_attempt message_sent_attempt ();
+      void emit_message_sent_attempt (bool);
+
+    protected:
+      type_message_sent_attempt m_message_sent_attempt;
+
     protected:
       virtual bool on_key_press_event (GdkEventKey *) override;
   };
