@@ -1,9 +1,12 @@
 # include <iostream>
 
 # include "astroid.hh"
+# include "db.hh"
 # include "log.hh"
 # include "edit_message.hh"
 # include "reply_message.hh"
+
+# include "actions/action_manager.hh"
 
 # include "message_thread.hh"
 # include "utils/address.hh"
@@ -100,6 +103,10 @@ namespace Astroid {
     read_edited_message ();
 
     start_vim_on_socket_ready = true;
+
+    /* sent signal */
+    message_sent_attempt().connect (
+        sigc::mem_fun (this, &ReplyMessage::on_message_sent_attempt_received));
   }
 
   void ReplyMessage::on_receiver_combo_changed () {
@@ -208,6 +215,29 @@ namespace Astroid {
     };
 
     return m;
+  }
+
+  void ReplyMessage::on_message_sent_attempt_received (bool res) {
+    if (res) {
+      log << info << "re: message successfully sent, adding replied tag to original." << endl;
+
+      if (!msg->in_notmuch) {
+        log << warn << "re: message not in notmuch." << endl;
+        return;
+      }
+
+      Db db(Db::DATABASE_READ_WRITE);
+
+      db.on_message (msg->mid,
+          [&] (notmuch_message_t * nm_msg) {
+
+            notmuch_message_add_tag (nm_msg, "replied");
+
+          });
+
+
+      astroid->global_actions->emit_message_updated (&db, msg->mid);
+    }
   }
 }
 
